[gd_scene load_steps=9 format=2]

[ext_resource path="res://games/FindTheTriangle/Scripts/index.gd" type="Script" id=1]
[ext_resource path="res://games/FindTheTriangle/Scenes/GameWorld.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/FindTheTriangle/Materials/crosshair.png" type="Texture" id=3]
[ext_resource path="res://games/FindTheTriangle/Materials/wordart.png" type="Texture" id=4]
[ext_resource path="res://games/FindTheTriangle/Materials/RandomFigs2_albedo.png" type="Texture" id=5]
[ext_resource path="res://games/FindTheTriangle/Font/FjallaOne-Regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 66
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 107
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="TimeOut" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Second" type="Timer" parent="."]
process_mode = 0

[node name="MainCanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="MainCanvasLayer"]
modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="MainCanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopContainer" type="HBoxContainer" parent="MainCanvasLayer/MainContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3

[node name="CCPlayer1" type="CenterContainer" parent="MainCanvasLayer/MainContainer/TopContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player1" type="ViewportContainer" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer1"]
margin_left = 480.0
margin_top = 270.0
margin_right = 1440.0
margin_bottom = 810.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vp Player1" type="Viewport" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer1/Player1"]
size = Vector2( 960, 540 )
handle_input_locally = false
render_target_update_mode = 3

[node name="World" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer1/Player1/Vp Player1" instance=ExtResource( 2 )]

[node name="crosshair" type="TextureRect" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer1"]
margin_left = 935.0
margin_top = 515.0
margin_right = 985.0
margin_bottom = 565.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="win" type="TextureRect" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer1"]
visible = false
margin_left = 710.0
margin_top = 415.0
margin_right = 1210.0
margin_bottom = 665.0
rect_min_size = Vector2( 500, 250 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Username" type="Label" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer1"]
visible = false
margin_left = 480.0
margin_top = 270.0
margin_right = 1440.0
margin_bottom = 810.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 960, 540 )
custom_fonts/font = SubResource( 1 )
text = "Username"

[node name="CCPlayer2" type="CenterContainer" parent="MainCanvasLayer/MainContainer/TopContainer"]
visible = false
margin_left = 964.0
margin_right = 1924.0
margin_bottom = 1084.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player2" type="ViewportContainer" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer2"]
margin_top = 272.0
margin_right = 960.0
margin_bottom = 812.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vp Player2" type="Viewport" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer2/Player2"]
size = Vector2( 960, 540 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 0

[node name="crosshair" type="TextureRect" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer2"]
margin_left = 455.0
margin_top = 517.0
margin_right = 505.0
margin_bottom = 567.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="win" type="TextureRect" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer2"]
visible = false
margin_left = 230.0
margin_top = 417.0
margin_right = 730.0
margin_bottom = 667.0
rect_min_size = Vector2( 500, 250 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Username" type="Label" parent="MainCanvasLayer/MainContainer/TopContainer/CCPlayer2"]
visible = false
margin_top = 272.0
margin_right = 960.0
margin_bottom = 812.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 960, 540 )
custom_fonts/font = SubResource( 1 )
text = "Username"
align = 2

[node name="BottomContainer" type="HBoxContainer" parent="MainCanvasLayer/MainContainer"]
visible = false
margin_top = 544.0
margin_right = 1924.0
margin_bottom = 1084.0
size_flags_vertical = 3

[node name="CCPlayer3" type="CenterContainer" parent="MainCanvasLayer/MainContainer/BottomContainer"]
visible = false
margin_right = 1924.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player3" type="ViewportContainer" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer3"]
margin_left = 482.0
margin_right = 1442.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vp Player3" type="Viewport" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer3/Player3"]
size = Vector2( 960, 540 )
handle_input_locally = false
render_target_update_mode = 0

[node name="crosshair" type="TextureRect" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer3"]
margin_left = 937.0
margin_top = 245.0
margin_right = 987.0
margin_bottom = 295.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="win" type="TextureRect" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer3"]
visible = false
margin_left = 712.0
margin_top = 145.0
margin_right = 1212.0
margin_bottom = 395.0
rect_min_size = Vector2( 500, 250 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Username" type="Label" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer3"]
visible = false
margin_left = 482.0
margin_right = 1442.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 960, 540 )
custom_fonts/font = SubResource( 1 )
text = "Username"
valign = 2

[node name="CCPlayer4" type="CenterContainer" parent="MainCanvasLayer/MainContainer/BottomContainer"]
visible = false
margin_left = 964.0
margin_right = 1924.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player4" type="ViewportContainer" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer4"]
margin_right = 960.0
margin_bottom = 540.0
rect_min_size = Vector2( 960, 540 )
size_flags_horizontal = 3
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vp Player4" type="Viewport" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer4/Player4"]
size = Vector2( 960, 540 )
handle_input_locally = false
render_target_update_mode = 0

[node name="crosshair" type="TextureRect" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer4"]
margin_left = 455.0
margin_top = 245.0
margin_right = 505.0
margin_bottom = 295.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="win" type="TextureRect" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer4"]
visible = false
margin_left = 230.0
margin_top = 145.0
margin_right = 730.0
margin_bottom = 395.0
rect_min_size = Vector2( 500, 250 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="Username" type="Label" parent="MainCanvasLayer/MainContainer/BottomContainer/CCPlayer4"]
visible = false
margin_right = 960.0
margin_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 960, 540 )
custom_fonts/font = SubResource( 1 )
text = "Username"
align = 2
valign = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainCanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -70.0
margin_right = 150.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 100 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]00[/center]"
text = "00"
__meta__ = {
"_edit_use_anchors_": true
}
